# lerigou

./: .gitignore  README.md  Tarefas Omnikap.canvas  package-lock.json  package.json  pyproject.toml
scripts/: parse-ts.js
src/lerigou/: __init__.py  cli.py
src/lerigou/ai/: __init__.py  analyzer.py  canvas_adapter.py  models.py  prompts.py
src/lerigou/canvas/: __init__.py  builder.py  layout.py  models.py  renderer.py
src/lerigou/commands/: __init__.py  create_canvas.py  create_canvas_v2.py
src/lerigou/processor/: __init__.py  adapter.py  api_matcher.py  collector.py  models.py  parser.py
src/lerigou/processor/analyzers/: __init__.py  python.py  typescript.py
src/lerigou/processor/scanners/: __init__.py  fastapi.py
src/lerigou/utils/: __init__.py  text_dimensions.py
tests/: __init__.py  test_canvas.py  test_processor.py
tests/fixtures/: example.tsx
tests/fixtures/backend/: routes.py
