[project]
name = "lerigou"
version = "0.1.0"
description = "CLI multitarefa para análise e visualização de código"
readme = "README.md"
authors = [
    { name = "Leonardo Viva", email = "leonardo.leal@konecty.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
lerigou = "lerigou.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
